@@ -21,6 +21,11 @@
       <version>${project.version}</version>
     </dependency>
     <dependency>
+      <groupId>org.ow2.asm</groupId>
+      <artifactId>asm</artifactId>
+      <version>9.9.1</version>
+    </dependency>
+    <dependency>
       <groupId>org.eclipse.lsp4j</groupId>
       <artifactId>org.eclipse.lsp4j</artifactId>
     </dependency>
@@ -68,6 +73,7 @@
             --add-exports jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED
             --add-exports jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED
             --add-exports jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED
+            --add-exports jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED
             --add-exports jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED
             --add-exports jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED
             --add-exports jdk.compiler/com.sun.tools.javac.jvm=ALL-UNNAMED
